edit canonical url

--- a/feeling-lucky.html
+++ b/feeling-lucky.html
@@ -8,8 +8,8 @@
         content="Learn how to choose the best film stock for portraits, landscapes, and black-and-white photography. Get tips on film types and ISO for stunning analog images." />
         <meta name="keywords" content="film stock, photography, best film stock, portraits, landscapes, black-and-white photography, ISO film, analog photography, Kodak Portra, Fujifilm, Ilford HP5, film photography guide"/>
         <meta name="author" content="Janis Ringli">
-        <meta name="robots" content="index, follow">
-        <link rel="canonical" href="127.0.0.1/blog/choose-film-stock" /> -->
+        <meta name="robots" content="index, follow">-->
+        <link rel="canonical" href="/feeling-lucky" /> 
     <title>Feeling Lucky</title>
   </head>
   <body>
