edit css for the recent blog posts

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <hr />
         <h2>Explore</h2>
         <!-- Recent Blog Post Previews -->
-        <section>
+        <section style="width: 100%">
           <div class="recent-blog-container">
             <article class="post-preview-container">
               <a href="./posts/choosing-the-right-film-stock.html">
@@ -74,6 +74,8 @@
                 </div>
               </a>
             </article>
+            
+            
           </div>
         </section>
       </div>
