rename title of the site

--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vintage Viewfinder - Photography Blog</title>
+    <title> Viewfinder - Photography Blog</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Navigation Bar -->
     <nav>
       <div class="nav-container">
-        <a href="#"><img src="logo.png" alt="Vintage Viewfinder Logo" /></a>
+        <a href="#"><img src="logo.png" alt="theshutterblog logo" /></a>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Gallery</a></li>
@@ -35,7 +35,7 @@
         </div>
 
         <!-- Blog Title and Introduction -->
-        <h1>Welcome to Vintage Viewfinder</h1>
+        <h1>Welcome to TheShutterBlog</h1>
         <p>
           Discover the beauty of film photography through the lens of vintage
           cameras. Explore our collection of photo stories, tips, and
@@ -75,7 +75,7 @@
 
     <!-- Footer -->
     <footer>
-      <p>&copy; 2024 Vintage Viewfinder</p>
+      <p>&copy; 2024 TheShutterBlog</p>
       <p>
         <a href="terms.html">Terms of Use</a> |
         <a href="privacy.html">Privacy Policy</a>
