--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Terms of Use - VintageViewfinder</title>
+    <title>Terms of Use - TheShutterBlog</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -38,7 +38,7 @@
         <p class="tos-last-update"><strong>Last Updated:</strong> 19. September 2024</p>
       
       <p>
-        Welcome to VintageViewfinder. By accessing or using this website, you
+        Welcome to TheShutterBlog. By accessing or using this website, you
         agree to comply with and be bound by the following Terms of Use. Please
         read these terms carefully. If you do not agree with these terms, you
         should not use or access this site.
@@ -47,24 +47,24 @@
       <h2>1. Acceptance of Terms</h2>
       <p>
         By using this website, you agree to the terms and conditions outlined in
-        this document. VintageViewfinder reserves the right to update or modify
+        this document. TheShutterBlog reserves the right to update or modify
         these terms at any time without prior notice. Your continued use of the
         site after changes are posted will mean that you accept those changes.
       </p>
 
       <h2>2. Intellectual Property</h2>
       <p>
-        All content on VintageViewfinder, including but not limited to text,
-        images, videos, and graphics, are the property of VintageViewfinder
+        All content on TheShutterBlog, including but not limited to text,
+        images, videos, and graphics, are the property of TheShutterBlog
         unless otherwise noted. Unauthorized use or duplication of any material
         from this site without express permission is prohibited. You may share
         or reference content for non-commercial purposes with proper attribution
-        to VintageViewfinder.
+        to TheShutterBlog.
       </p>
 
       <h2>3. User Responsibilities</h2>
       <p style="margin-bottom: 0em;">
-        You agree to use VintageViewfinder for lawful purposes only and in a way
+        You agree to use TheShutterBlog for lawful purposes only and in a way
         that does not infringe upon the rights of others or restrict their use
         of the site. You must not:
       </p>
@@ -89,15 +89,15 @@
 
       <h2>5. Third-Party Links</h2>
       <p>
-        VintageViewfinder may contain links to third-party websites for your
+        TheShutterBlog may contain links to third-party websites for your
         convenience. We are not responsible for the content, accuracy, or
         opinions expressed on these websites. Inclusion of these links does not
-        imply approval or endorsement by VintageViewfinder.
+        imply approval or endorsement by TheShutterBlog.
       </p>
 
       <h2>6. Disclaimer</h2>
       <p>
-        All content on VintageViewfinder is provided "as is" and for
+        All content on TheShutterBlog is provided "as is" and for
         informational purposes only. We make no warranties, express or implied,
         regarding the accuracy or reliability of any content. We are not liable
         for any damages arising from the use of this site or its content.
@@ -105,14 +105,14 @@
 
       <h2>7. Limitation of Liability</h2>
       <p>
-        In no event shall VintageViewfinder, its authors, or affiliates be
+        In no event shall TheShutterBlog, its authors, or affiliates be
         liable for any direct, indirect, incidental, or consequential damages
         arising out of your use of the website or inability to access it.
       </p>
 
       <h2>8. Termination</h2>
       <p>
-        We reserve the right to terminate your access to VintageViewfinder at
+        We reserve the right to terminate your access to TheShutterBlog at
         any time, without notice, for conduct that we believe violates these
         Terms of Use or is harmful to other users or the website.
       </p>
@@ -134,7 +134,7 @@
 
       <h2>11. Changes to Terms</h2>
       <p>
-        VintageViewfinder reserves the right to modify these Terms of Use at any
+        TheShutterBlog reserves the right to modify these Terms of Use at any
         time. The most current version will be posted on this page, with the
         updated date listed at the top. We encourage you to review these terms
         regularly.
@@ -143,7 +143,7 @@
     </section>
 </main>
     <footer>
-      <p>&copy; 2024 VintageViewfinder. All rights reserved.</p>
+      <p>&copy; 2024 TheShutterBlog. All rights reserved.</p>
     </footer>
   </body>
 </html>
