--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Terms of Use - VintageViewfinder</title>
+    <title>Terms of Use - TheShutterBlog</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -37,10 +37,10 @@
       <h1>Privacy Policy</h1>
       <p class="tos-last-update"><strong>Last Updated:</strong> [Insert Date]</p>
 
-      <p>At VintageViewfinder, we respect your privacy and are committed to protecting your data. This Privacy Policy outlines our practices regarding the limited data collected through Google Analytics. By using our website, you agree to the collection of this information as described below.</p>
+      <p>At TheShutterBlog, we respect your privacy and are committed to protecting your data. This Privacy Policy outlines our practices regarding the limited data collected through Google Analytics. By using our website, you agree to the collection of this information as described below.</p>
   
       <h2>1. Data We Collect</h2>
-      <p>VintageViewfinder does not collect personal information directly from users. The only data collected is by Google Analytics, a third-party service that gathers anonymized information to help us understand how visitors use the website.</p>
+      <p>TheShutterBlog does not collect personal information directly from users. The only data collected is by Google Analytics, a third-party service that gathers anonymized information to help us understand how visitors use the website.</p>
       <p>Google Analytics may collect the following data:</p>
       <ul>
           <li>Device and browser information</li>
@@ -54,13 +54,13 @@
       <p>Google Analytics uses cookies to track user interactions with the website. These cookies collect anonymous data such as how long a user stays on the site and which pages they visit. You can choose to disable cookies through your browser settings, though this may impact how certain features of the site function.</p>
   
       <h2>3. Data Sharing and Disclosure</h2>
-      <p>VintageViewfinder does not sell, share, or transfer any personal information to third parties. However, Google Analytics data is collected by Google and may be used in accordance with their privacy policy.</p>
+      <p>TheShutterBlog does not sell, share, or transfer any personal information to third parties. However, Google Analytics data is collected by Google and may be used in accordance with their privacy policy.</p>
   
       <h2>4. Data Security</h2>
       <p>We rely on Google Analytics, which has implemented security measures to protect collected data. Please refer to Google's privacy policies for more details on their data protection practices.</p>
   
       <h2>5. Third-Party Links</h2>
-      <p>Our website may contain links to third-party websites. We are not responsible for the privacy practices of those sites. Please review the privacy policies of any external websites you visit through links on VintageViewfinder.</p>
+      <p>Our website may contain links to third-party websites. We are not responsible for the privacy practices of those sites. Please review the privacy policies of any external websites you visit through links on TheShutterBlog.</p>
   
       <h2>6. Changes to This Privacy Policy</h2>
       <p>We may update our Privacy Policy from time to time. Any changes will be posted on this page with an updated "Last Updated" date. We encourage you to review this policy periodically.</p>
@@ -72,7 +72,7 @@
     </section>
 </main>
     <footer>
-      <p>&copy; 2024 VintageViewfinder. All rights reserved.</p>
+      <p>&copy; 2024 TheShutterBlog. All rights reserved.</p>
     </footer>
   </body>
 </html>
