--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -35,7 +35,7 @@
 
     <section class="blog-content">
       <h1>Privacy Policy</h1>
-      <p class="tos-last-update"><strong>Last Updated:</strong> [Insert Date]</p>
+      <p class="tos-last-update"><strong>Last Updated:</strong> 17. October 2024</p>
 
       <p>At TheShutterBlog, we respect your privacy and are committed to protecting your data. This Privacy Policy outlines our practices regarding the limited data collected through Google Analytics. By using our website, you agree to the collection of this information as described below.</p>
   
