--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -64,10 +64,10 @@
   
       <h2>6. Changes to This Privacy Policy</h2>
       <p>We may update our Privacy Policy from time to time. Any changes will be posted on this page with an updated "Last Updated" date. We encourage you to review this policy periodically.</p>
-  
-      <h2>7. Contact Us</h2>
+   <!-- TODO: buy proton mail plus to get an alias email address -->
+      <!-- <h2>7. Contact Us</h2>
       <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-      <p><strong>Email:</strong> [your email address]</p>
+      <p><strong>Email:</strong> [your email address]</p> -->
 
     </section>
 </main>
