--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -120,19 +120,18 @@
       <h2>9. Governing Law</h2>
       <p>
         These Terms of Use are governed by and construed in accordance with the
-        laws of [Your Country/State], without regard to its conflict of law
+        laws of Switzerland, without regard to its conflict of law
         provisions.
       </p>
-
-      <h2>10. Contact Information</h2>
+  <!-- TODO: buy proton mail plus to get an alias email address -->
+      <!-- <h2>10. Contact Information</h2>
       <p>
         If you have any questions or concerns about these Terms of Use, please
         contact us at:<br />
         <strong>Email:</strong> [your email address]<br />
-        <strong>Address:</strong> [your physical address, if applicable]
-      </p>
+      </p> -->
 
-      <h2>11. Changes to Terms</h2>
+      <h2>10. Changes to Terms</h2>
       <p>
         TheShutterBlog reserves the right to modify these Terms of Use at any
         time. The most current version will be posted on this page, with the
