edit links to tos and pp

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <footer>
       <p>&copy; 2024 Vintage Viewfinder</p>
       <p>
-        <a href="terms.html">Terms of Use</a> |
-        <a href="privacy.html">Privacy Policy</a>
+        <a href="./terms-of-use.html">Terms of Use</a> |
+        <a href="./privacy-policy.html">Privacy Policy</a>
       </p>
     </footer>
   </body>
