--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,26 +9,27 @@
   </head>
   <body>
     <nav>
-        <div class="nav-container">
+      <div class="nav-container">
+    <a
+      href="./index.html"
+      aria-label="redirects to the homepage of this website"
+    >
+      <img src="../assets/logo.png" alt="The Logo of this blog, it" />
+    </a>
+    <ul>
+      <a href="/"><li>Home</li></a>
       <a
-        href="./index.html"
-        aria-label="redirects to the homepage of this website"
+        href=""
+        aria-label="Learn more about this blog and who the author is"
       >
-        <img src="./assets/logo.png" alt="The Logo of this blog, it" />
+        <li>About</li> </a
+      ><a href=""> <li>Contact</li> </a
+      >
+        <li></li>
       </a>
-      <ul>
-        <a
-          href=""
-          aria-label="Learn more about this blog and who the author is"
-        >
-          <li>About</li> </a
-        ><a href=""> <li>Contact</li> </a
-        >
-          <li></li>
-        </a>
-      </ul>
-    </div>
-    </nav>
+    </ul>
+  </div>
+  </nav>
     <main>
 
   
