--- a/feeling-lucky.html
+++ b/feeling-lucky.html
@@ -10,6 +10,15 @@
         <meta name="author" content="Janis Ringli">
         <meta name="robots" content="index, follow">-->
         <link rel="canonical" href="/feeling-lucky" /> 
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QCFT264PS7');
+</script>
     <title>Feeling Lucky</title>
   </head>
   <body>
