--- a/home.html
+++ b/home.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Viewfinder - Photography Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QCFT264PS7');
+</script>
   </head>
   <body>
     <!-- Navigation Bar -->
