--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Terms of Use - TheShutterBlog</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QCFT264PS7');
+</script>
   </head>
   <body>
     <nav>
