edit broken link

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!-- Navigation Bar -->
     <nav>
       <div class="nav-container">
-        <a href="#"><img src="logo.png" alt="Vintage Viewfinder Logo" /></a>
+        <a href="/"><img src="logo.png" alt="Vintage Viewfinder Logo" /></a>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="#">Gallery</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
