edit broken link

--- a/index.html
+++ b/index.html
@@ -19,14 +19,26 @@
     <!-- Navigation Bar -->
     <nav>
       <div class="nav-container">
-        <a href="/"><img src="logo.png" alt="Vintage Viewfinder Logo" /></a>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </div>
-    </nav>
+    <a
+      href="/"
+      aria-label="redirects to the homepage of this website"
+    >
+      <img src="../assets/logo.png" alt="The Logo of this blog, it" />
+    </a>
+    <ul>
+      <a href="/"><li>Home</li></a>
+      <a
+        href=""
+        aria-label="Learn more about this blog and who the author is"
+      >
+        <li>About</li> </a
+      ><a href=""> <li>Contact</li> </a
+      >
+        <li></li>
+      </a>
+    </ul>
+  </div>
+  </nav>
 
     <!-- Main Content Area -->
     <main>
