--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Terms of Use - TheShutterBlog</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="canonical" href="https://www.theshutterblog.com/privacy-policy">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
 <script>
