--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
+<link rel="canonical" href="https://www.theshutterblog.com/terms-of-use">
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
