add meta description and canonical url

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Shutter Blog - Photography Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="The Shutter Blog is your go-to resource for film photography tips, gear reviews, and photo stories. Explore the art of photography with vintage cameras, behind-the-scenes insights, and expert advice to elevate your skills.">
+    <meta name="keywords" content="film photography, photography blog, vintage cameras, photo stories, photography tips, photography gear, film stock, drone photography, photography tutorials, camera reviews">
+    <link rel="canonical" href="/">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
 <script>
