refactor tos and pp links and robot meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="The Shutter Blog is your go-to resource for film photography tips, gear reviews, and photo stories. Explore the art of photography with vintage cameras, behind-the-scenes insights, and expert advice to elevate your skills.">
     <meta name="keywords" content="film photography, photography blog, vintage cameras, photo stories, photography tips, photography gear, film stock, drone photography, photography tutorials, camera reviews">
     <link rel="canonical" href="/">
+    <meta name="robots" content="index, follow">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
 <script>
