--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,6 +7,7 @@
     <title>Terms of Use - TheShutterBlog</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="canonical" href="https://www.theshutterblog.com/privacy-policy">
+    <meta name="robots" content="index, follow">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
 <script>
