--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <footer>
       <p>&copy; 2024 The Shutter Blog</p>
       <p>
-        <a href="./terms-of-use.html">Terms of Use</a> |
-        <a href="./privacy-policy.html">Privacy Policy</a>
+        <a href="./terms-of-use">Terms of Use</a> |
+        <a href="./privacy-policy">Privacy Policy</a>
       </p>
     </footer>
   </body>
