--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="film photography, photography blog, vintage cameras, photo stories, photography tips, photography gear, film stock, drone photography, photography tutorials, camera reviews">
     <link rel="canonical" href="/">
     <meta name="robots" content="index, follow">
+    <meta name="title" content="TheShutterBlog">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
 <script>
