--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCFT264PS7"></script>
-<link rel="canonical" href="https://www.theshutterblog.com/terms-of-use">
+<link rel="canonical" href="https://theshutterblog.com/terms-of-use">
 <meta name="robots" content="index, follow">
 <script>
   window.dataLayer = window.dataLayer || [];
